package backend.mymetricserver;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class MyMetricServerApplication {

    public static void main(String[] args) {
        SpringApplication.run(MyMetricServerApplication.class, args);
    }

}
