package backend.mymetricserver.config;

import org.springframework.context.annotation.Configuration;

@Configuration
public class MongoConfig {
}
